<resources>
    <string name="app_name">My Application</string>
    <string name="toggle_turn_on">Turn On</string>
    <string name="toggle_turn_off">Turn Off</string>
    <string name="btn_display">Display</string>
    <string name="example_edittext">Example showing EditText</string>
    <string name="show_the_text">Show the Text</string>
    <string name="enter_text">text changes</string>
    <string name="menu_settings">Settings</string>
    <string name="red_string">Red</string>
    <string name="blue_string">Blue</string>
    <string name="yellow_string">Yellow</string>
    <string name="green_string">Green</string>
    <string name="white_string">White</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main3">MainActivity3</string>
</resources>